@@ -1,5 +1,5 @@
 /* auditd-config.c -- 
- * Copyright 2004-2009 Red Hat Inc., Durham, North Carolina.
+ * Copyright 2004-2010 Red Hat Inc., Durham, North Carolina.
  * All Rights Reserved.
  *
  * This program is free software; you can redistribute it and/or modify
@@ -686,6 +686,7 @@ static int name_format_parser(struct nv_pair *nv, int line,
 {
 	int i;
 
+	audit_msg(LOG_DEBUG, "name_format_parser called with: %s", nv->value);
 	for (i=0; node_name_formats[i].name != NULL; i++) {
 		if (strcasecmp(nv->value, node_name_formats[i].name) == 0) {
 			config->node_name_format = node_name_formats[i].option;
@@ -699,6 +700,7 @@ static int name_format_parser(struct nv_pair *nv, int line,
 static int name_parser(struct nv_pair *nv, int line,
 		struct daemon_conf *config)
 {
+	audit_msg(LOG_DEBUG, "name_parser called with: %s", nv->value);
 	if (nv->value == NULL)
 		config->node_name = NULL;
 	else
@@ -1607,7 +1609,7 @@ int resolve_node(struct daemon_conf *config)
 				if (rc2 != 0) {
 					audit_msg(LOG_ERR,
 					"Cannot resolve hostname %s (%s)",
-					tmp_name, gai_strerror(rc2));
+					tmp_name, gai_strerror(rc));
 					rc = -1;
 					break;
 				}
@@ -1625,6 +1627,9 @@ int resolve_node(struct daemon_conf *config)
 				struct addrinfo *ai;
 				struct addrinfo hints;
 
+				audit_msg(LOG_DEBUG,
+					"Resolving numeric address for %s",
+					tmp_name);
 				memset(&hints, 0, sizeof(hints));
 				hints.ai_flags = AI_ADDRCONFIG | AI_PASSIVE;
 				hints.ai_socktype = SOCK_STREAM;
@@ -1633,7 +1638,7 @@ int resolve_node(struct daemon_conf *config)
 				if (rc2 != 0) {
 					audit_msg(LOG_ERR,
 					"Cannot resolve hostname %s (%s)",
-					tmp_name, gai_strerror(rc));
+					tmp_name, gai_strerror(rc2));
 					rc = -1;
 					break;
 				}
@@ -1647,6 +1652,9 @@ int resolve_node(struct daemon_conf *config)
 			}
 			break;
 	}
+	if (rc == 0 && config->node_name)
+		audit_msg(LOG_DEBUG, "Resolved node name: %s",
+				config->node_name);
 	return rc;
 }
 
